@@ -840,13 +840,12 @@ There is a strange hole in the rock wall, circular in shape.
 E
 sign signpost~
    The signpost reads in ancient runic script:
-
+@n
 The Penultimate Tower of Wizardry was rumored to exist, once, just
 down this road... who knows if this is true?  For though many have
 went on to see, none have returned to claim it true...
-
+@n
                                 --Mercutio the Bard of the Realm
-
 ~
 E
 plot device~
