@@ -7,6 +7,10 @@ NEW COMMANDS AND NEW MUD BEHAVIOR:
 **  Check out the latest news and information on the tbaMUD codebase at
     @Chttp://tbamud.com@n.
 
+**  Added a new command to cancel all pending (queued) commands. For example
+    a fighting player that has spammed 10 kick or spell commands can type
+    '--' to cancel them all so they can instead flee.
+
 **  New automap shows a small ascii map to the right of room descriptions.
     Toggle automap on to enable. There is also a new map command that can
     show a larger map area.
